-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
None
-
MSVC 2013 32 bit
The internal use of 's' in the lambda definition of QStringLiteral can conflict with external variables:
if (char *s = 0) return QStringLiteral("Error");
main.cpp(7) : error C2373: 's' : redefinition; different type modifiers main.cpp(6) : see declaration of 's' main.cpp(7) : error C3493: 's' cannot be implicitly captured because no default capture mode has been specified
| For Gerrit Dashboard: QTBUG-41706 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 96177,2 | Avoid naming clashes with QStringLiteral local variable | 5.3 | qt/qtbase | Status: MERGED | +2 | 0 |